# loopClosure

./: .gitignore  CMakeLists.txt  README.md
src/: featureTraining.cpp  loopClosure.cpp
